# C-Dynamics

./: .gitignore  README.md
dyna/: core.hpp  systems.hpp  units.hpp  viz.hpp
dyna/core/: bulk_body.hpp  dyna_namespace.hpp  iostream_operators.hpp  kinematic_derivatives.hpp  negligible_radius_bodies.hpp  particle.hpp  physika.hpp  td_chain.hpp
dyna/systems/: collisional.hpp  dyna_namespace.hpp  logger.hpp  non_collisional.hpp  particle_system.hpp
dyna/viz/: frame_2d.hpp
examples/: CMakeLists.txt  examples.code-workspace  includes.hpp
examples/soft_body_viz/: source.cpp
examples/three_body/: m1_864.000000_.csv  m2_8640.000000_.csv  m3_864.000000_.csv  source.cpp
examples/three_body_viz/: m1_86.400000_.csv  m1_864.000000_.csv  m2_86.400000_.csv  m2_864.000000_.csv  m3_86.400000_.csv  m3_864.000000_.csv  m3_8640.000000_.csv  source.cpp
examples/two_body/: m1_86.400000_.csv  m1_864.000000_.csv  m1_8640.000000_.csv  m2_86.400000_.csv  m2_864.000000_.csv  source.cpp
examples/two_body_viz/: source.cpp
